<resources>
    <string name="app_name">CadoX</string>
    <string name="titleValue">ARTICLE\'S DETAIL</string>
    <string name="namearticle"></string>
    <string name="descriptifarticle"></string>
    <string name="prixarticle"></string>
    <string name="labachete"></string>
    <string name="linkarticle"></string>

    <string name="actionTexte">Execution</string>
    <string name="editeMessage">Do you want modify this article?</string>
    <string name="editeMessageTitle">Confirm modify</string>

    <string name="txtYes">yes</string>
    <string name="txtNo">no</string>
    <string name="txtCancel">Cancel</string>

    <string name="txtBYDate">bought on : </string>
    <string name="txtUnitMoney">£</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titreModification">Modification d\'un article</string>
    <string name="intituleArticle" />
</resources>